# codeforces

./: .gitignore  CMakeLists.txt
CGR1/: A.cpp  B.cpp  C.cpp
div2/478/: A.cpp
div2/487/: A.cpp  B.cpp  C.cpp  D.cpp
div2/491/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
div2/503/: A.cpp  B.cpp  C.cpp
div2/504/: A.cpp  B.cpp  C.cpp  D.cpp
div2/505/: A.cpp  B.cpp  C.cpp  D.cpp
div2/510/: A.cpp  B.cpp  C.cpp  D.cpp  D_2.cpp
div2/511/: A.cpp  B.cpp  C.cpp
div2/514/: A.cpp  B.cpp  C.cpp  D.cpp
div2/534/: A.cpp  A_2.cpp  B.cpp  B_2.cpp  C.cpp  D.cpp
div2/536/: A.cpp  B.cpp  C.cpp  D.cpp
div2/538/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
div2/558/: A.cpp  B.cpp  B2.cpp  C.cpp
div2/559/: B.cpp
div2/561/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
div2/563/: AEhabFailsToBeThanos.cpp  BEhabIsAnOddPerson.cpp  CEhabAndASpecialColoringProblem.cpp  DEhabAndTheExpectedXORProblem.cpp
div2/566/: AFillingShapes.cpp  BPlusFromPicture.cpp  CBeautifulLyrics.cpp
div2/572/: AKeanuReeves.cpp  BNumberCircle.cpp  CCandies.cpp
div2/573/: ATokitsukazeAndEnhancement.cpp  BTokitsukazeAndMahjong.cpp  CIntervalGame.cpp  CTokitsukazeAndDiscardItems.cpp  DTokitsukazeCSLAndStoneGame.cpp  FTokitsukazeAndStrangeRectangle.cpp
div2/574/: ADrinksChoosing.cpp  BSportMafia.cpp  CBasketballExercise.cpp  D1SubmarineInTheRybinskSeaEasyEdition.cpp  D2SubmarineInTheRybinskSeaHardEdition.cpp  EOpenStreetMap.cpp
div2/576/: ACityDay.cpp  BWaterLily.cpp  CMP3.cpp  DWelfareState.cpp  (+1 more)
hello2020/: ANewYearAndNaming.cpp  BNewYearAndAscentSequence.cpp  CNewYearAndPermutation.cpp  DNewYearAndConference.cpp
(+115 files in other folders)
