set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(A div2/536/A.cpp)
add_executable(B div2/536/B.cpp)

add_executable(C div2/536/C.cpp)

add_executable(D div2/536/D.cpp)

add_executable(E div3/496/E.cpp)

add_executable(C_2 div3/506/C_2.cpp)

add_executable(D_2 div2/510/D_2.cpp)


add_executable(A_2 div2/534/A_2.cpp)
add_executable(B_2 div2/534/B_2.cpp)
