set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

add_executable(A div2/561/A.cpp)
add_executable(B div2/561/B.cpp)

add_executable(C div2/561/C.cpp)

add_executable(D div2/561/D.cpp)

add_executable(E div2/561/E.cpp)

add_executable(C_2 div3/506/C_2.cpp)

add_executable(D_2 div2/510/D_2.cpp)


add_executable(A_2 div2/534/A_2.cpp)
add_executable(B_2 div2/534/B_2.cpp)

add_executable(B2 div2/558/B2.cpp)
